--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,4 +17,5 @@ tasks:
   init: yarn
   command: nginx -c $PWD/nginx.conf; npx webpack-dev-server
 - before: cleos wallet unlock --password </password
-  command: nodeos --config-dir ~/eosio/chain/config --data-dir ~/eosio/chain/data -e -p eosio --plugin eosio::chain_api_plugin --contracts-console
+#   command: nodeos --config-dir ~/eosio/chain/config --data-dir ~/eosio/chain/data -e -p eosio --plugin eosio::chain_api_plugin --contracts-console
+  command: nodeos --config-dir ~/eosio/chain/config --data-dir ~/eosio/chain/data -e -p eosio --plugin eosio::chain_api_plugin --contracts-console --plugin eosio::state_history_plugin
